[gd_scene load_steps=5 format=3 uid="uid://clwtqdyu7dmev"]

[ext_resource type="Script" path="res://gameplay_hud/player_hud.gd" id="1_i2ajm"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_abo2o"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_tvend"]
bg_color = Color(0.901961, 0.478431, 0, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="Theme" id="Theme_6vg6u"]
ProgressBar/styles/background = SubResource("StyleBoxFlat_abo2o")
ProgressBar/styles/fill = SubResource("StyleBoxFlat_tvend")

[node name="PlayerHud" type="VBoxContainer"]
anchors_preset = -1
anchor_right = 0.5
offset_left = 50.0
offset_top = 30.0
offset_right = -50.0
theme_override_constants/separation = 0
script = ExtResource("1_i2ajm")
metadata/_edit_use_custom_anchors = true

[node name="CharacterName" type="Label" parent="."]
layout_mode = 2
offset_right = 860.0
offset_bottom = 26.0
text = "CHAD"

[node name="LifeBar" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
offset_top = 26.0
offset_right = 860.0
offset_bottom = 56.0
theme = SubResource("Theme_6vg6u")
max_value = 1.0
value = 0.5

[node name="EnemyContainer" type="MarginContainer" parent="."]
layout_mode = 2
offset_top = 56.0
offset_right = 860.0
offset_bottom = 107.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_right = 275

[node name="Column" type="VBoxContainer" parent="EnemyContainer"]
layout_mode = 2
offset_left = 25.0
offset_right = 585.0
offset_bottom = 51.0
theme_override_constants/separation = 0

[node name="EnemyName" type="Label" parent="EnemyContainer/Column"]
layout_mode = 2
offset_right = 560.0
offset_bottom = 26.0
text = "CHAD"

[node name="LifeBar" type="ProgressBar" parent="EnemyContainer/Column"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2
offset_top = 26.0
offset_right = 560.0
offset_bottom = 51.0
theme = SubResource("Theme_6vg6u")
max_value = 1.0
value = 0.5
